# ai_ocr

./: .gitignore  build.spec  config.ini.example  pyproject.toml
docs/: plan_history.md  revision_history.md
docs/plans/: 2026-02-22-ocr-with-llm-correction.md  2026-03-05_225500_searchable-pdf-rebuild.md
docs/revisions/: 2026-03-05_231500_searchable-pdf-rebuild.md
src/ai_ocr/: __init__.py  cli.py  config.py  llm_corrector.py  ocr_engine.py  pdf_reader.py  pdf_writer.py  pipeline.py
tests/: conftest.py  test_config.py  test_integration.py  test_integration_pdf.py  test_korean.py  test_llm_corrector.py  test_ocr_engine.py  test_pdf_reader.py  test_pdf_writer.py  test_pipeline.py
